# GeodeSwift

./: .gitignore  .swift-version  Package.swift
Plugins/GeodeSDKPrepare/: helpers.swift  plugin.swift
Plugins/GeodeSDKPrepare/assets/: CMakeLists.txt  headerPaths.txt  mod.json
Plugins/__OLD__GeodePrepare/: GeodePrepare.swift  helpers.swift
Sources/Geode/: lib.swift
Sources/GeodeSDK/include/: GeodeSDK.h
